Fix UI to handle both mojo and librosa winning
UI was hardcoded to always show mojo as winner.
Now dynamically shows actual winner based on benchmark results.

FIXES:
1. Removed hardcoded "winner" class from mojo card
2. Removed hardcoded winner badge from HTML
3. JavaScript now dynamically:
   - Adds "winner" class to faster implementation
   - Shows badge on winner card only
   - Updates hero section text (faster/slower)
   - Updates hero badge (mojo wins / librosa wins)
   - Changes colors based on winner (orange/blue)

UI NOW HANDLES:
- ✅ mojo wins: Shows "X% faster than librosa"
- ✅ librosa wins: Shows "X% slower than librosa"
- ✅ Percentages always positive (using Math.abs)
- ✅ Winner badge appears on correct card
- ✅ Winner styling (orange tint) on correct card
- ✅ Hero badge changes color based on winner

PERFORMANCE VARIABILITY:
Results show mojo and librosa are very close (within 2-3ms).
Winner can vary run-to-run due to:
- System load
- CPU thermal state
- Background processes
- Cache state

UI now accurately reflects reality of each benchmark run!

--- a/ui/frontend/index.html
+++ b/ui/frontend/index.html
@@ -85,7 +85,7 @@
         <!-- COMPARISON with VS divider -->
         <div class="comparison-grid" id="comparisonGrid" style="display: none;">
             <!-- librosa -->
-            <div class="result-card">
+            <div class="result-card" id="librosaCard">
                 <div class="result-header">
                     <div class="result-title-group">
                         <span class="result-icon">🐍</span>
@@ -94,6 +94,7 @@
                             <div class="result-lang">Python</div>
                         </div>
                     </div>
+                    <span class="winner-badge" id="librosaBadge" style="display: none;">⚡ FASTER</span>
                 </div>
                 <div class="result-time" id="librosaTime">--</div>
                 <div class="result-throughput" id="librosaThroughput">--</div>
@@ -107,8 +108,8 @@
                 <div class="vs-circle">vs</div>
             </div>
 
-            <!-- mojo-audio (winner!) -->
-            <div class="result-card winner delay-1">
+            <!-- mojo-audio -->
+            <div class="result-card delay-1" id="mojoCard">
                 <div class="result-header">
                     <div class="result-title-group">
                         <span class="result-icon">🔥</span>
@@ -117,7 +118,7 @@
                             <div class="result-lang">Mojo</div>
                         </div>
                     </div>
-                    <span class="winner-badge">⚡ FASTER</span>
+                    <span class="winner-badge" id="mojoBadge" style="display: none;">⚡ FASTER</span>
                 </div>
                 <div class="result-time" id="mojoTime">--</div>
                 <div class="result-throughput" id="mojoThroughput">--</div>
